--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "deploy":"npx hardhat run scripts/deploy.js --network localhost",
-    "build":"npx hardhat accounts && npx hardhat compile && npx hardhat clean"
+    "build":"npx hardhat accounts && npx hardhat compile && npx hardhat clean && npx hardhat test"
   },
   "keywords": [],
   "author": "",
